--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <title>Codie</title>
 </head>
 <body>
-  <p>Codie is a cool cool band.</p>
+  <section>
+    <h2>👩🏽‍🚀 👩🏻‍🚀 👩🏾‍🚀</h2>
+    <h1>codie</h1>
+    <h2>is a live-code trio</h2>
+    <h3>melody loveless | kate sicchio | sarah groff hennigh-palermo</h3>
+  </section>
+  
+  <section>
+    <h3>get emails about Codie shows and projects</h3> 
+    <form style="border:1px solid #ccc;padding:3px;text-align:center;" action="https://tinyletter.com/codie" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/codie', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Enter your email address</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p></form>
+ </section>
 </body>
 </html>
