--- a/index.html
+++ b/index.html
@@ -11,12 +11,38 @@
     <h2>👩🏽‍🚀 👩🏻‍🚀 👩🏾‍🚀</h2>
     <h1>codie</h1>
     <h2>is a live-code trio</h2>
-    <h3>melody loveless | kate sicchio | sarah groff hennigh-palermo</h3>
+    <h3>
+      <a href="https://www.instagram.com/melodycodes/">melody loveless</a> | 
+      <a href="https://twitter.com/sicchio">kate sicchio</a> | 
+      <a href="https://twitter.com/superSGP"></a>sarah groff hennigh-palermo</h3>
   </section>
   
   <section>
-    <h3>get emails about Codie shows and projects</h3> 
-    <form style="border:1px solid #ccc;padding:3px;text-align:center;" action="https://tinyletter.com/codie" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/codie', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Enter your email address</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p></form>
+    <h3></h3> 
+    <form 
+      style="border:1px solid #ccc;padding:3px;text-align:center;"
+      action="https://tinyletter.com/codie" 
+      method="post" 
+      target="popupwindow"
+      onsubmit="window.open('https://tinyletter.com/codie', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
+      <p>
+        <label for="tlemail">Enter your email address to get news about Codie shows and projects</label>
+      </p>
+      <p>
+        <input type="text" style="width:140px" name="email" id="tlemail" />
+      </p>
+      <input type="hidden" value="1" name="embed"/>
+      <input type="submit" value="Subscribe" />
+      <p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p>
+    </form>
+ </section>
+ <section>
+   <h2>👩🏽‍🚀 👩🏻‍🚀 👩🏾‍🚀 on the web</h2>
+   <h3>
+     <a href="https://twitter.com/hi_codie">Twitter</a> | 
+     <a href="https://twitter.com/hi_codie">Insta</a> | 
+     <a href="https://vimeo.com/282159597">Vimeo</a>
+   </h3>
  </section>
 </body>
 </html>
