--- a/index.html
+++ b/index.html
@@ -5,44 +5,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Codie</title>
+  <link href="https://fonts.googleapis.com/css?family=Gravitas+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,600i" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <section>
-    <h2>👩🏽‍🚀 👩🏻‍🚀 👩🏾‍🚀</h2>
-    <h1>codie</h1>
-    <h2>is a live-code trio</h2>
-    <h3>
-      <a href="https://www.instagram.com/melodycodes/">melody loveless</a> | 
-      <a href="https://twitter.com/sicchio">kate sicchio</a> | 
-      <a href="https://twitter.com/superSGP"></a>sarah groff hennigh-palermo</h3>
-  </section>
-  
-  <section>
-    <h3></h3> 
-    <form 
-      style="border:1px solid #ccc;padding:3px;text-align:center;"
-      action="https://tinyletter.com/codie" 
-      method="post" 
-      target="popupwindow"
-      onsubmit="window.open('https://tinyletter.com/codie', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
-      <p>
-        <label for="tlemail">Enter your email address to get news about Codie shows and projects</label>
-      </p>
-      <p>
-        <input type="text" style="width:140px" name="email" id="tlemail" />
-      </p>
-      <input type="hidden" value="1" name="embed"/>
-      <input type="submit" value="Subscribe" />
-      <p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p>
-    </form>
- </section>
- <section>
-   <h2>👩🏽‍🚀 👩🏻‍🚀 👩🏾‍🚀 on the web</h2>
-   <h3>
-     <a href="https://twitter.com/hi_codie">Twitter</a> | 
-     <a href="https://twitter.com/hi_codie">Insta</a> | 
-     <a href="https://vimeo.com/282159597">Vimeo</a>
-   </h3>
- </section>
+  <main>
+    <section class="shows">
+      <h4>⚡️ N E X T ⚡️⚡️ S H O W ⚡️ <span class="show-info">9/29 — <a href="https://icfp18.sigplan.org/track/farm-2018-papers">FARM Conference</a> — St. Louis</span></h4>
+      <h3> </h3>
+    </section>
+    <section>
+      <h2>👩🏽‍🚀 👩🏻‍🚀 👩🏾‍🚀</h2>
+      <h1>codie</h1>
+      <h3>is a live-code trio distributed through space</h3>
+      <h3>
+        <a href="https://www.instagram.com/melodycodes/">melody loveless</a> ☾ 
+        <a href="https://twitter.com/sicchio">kate sicchio</a> ☾
+        <a href="https://twitter.com/superSGP">sarah groff hennigh-palermo</a>
+      </h3>
+      <h3>
+        <a href="https://twitter.com/hi_codie">twitter</a> ◘  
+        <a href="https://twitter.com/hi_codie">insta</a> ◘ 
+        <a href="https://vimeo.com/282159597">vimeo</a>
+      </h3>
+    </section>
+    
+    <section class="form">
+      <form 
+        style="padding:3px;text-align:center;"
+        action="https://tinyletter.com/codie" 
+        method="post" 
+        target="popupwindow"
+        onsubmit="window.open('https://tinyletter.com/codie', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
+        <p>
+          <label for="tlemail">Enter your email address to get news about Codie shows and projects</label>
+        </p>
+        <p>
+          <input type="text" style="width:140px" name="email" id="tlemail" /><input type="submit" value="Subscribe" />
+        </p>
+        <input type="hidden" value="1" name="embed"/>
+        <p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p>
+      </form>
+   </section>
+  </main>
 </body>
 </html>
