--- a/index.html
+++ b/index.html
@@ -18,17 +18,21 @@
     <section>
       <h2>👩🏽‍🚀 👩🏻‍🚀 👩🏾‍🚀</h2>
       <h1>codie</h1>
+      <div class="interstitial">▽▽▽</div>
       <h3>is a live-code trio distributed through space</h3>
       <h3>
         <a href="https://www.instagram.com/melodycodes/">melody loveless</a> ☾ 
         <a href="https://twitter.com/sicchio">kate sicchio</a> ☾
         <a href="https://twitter.com/superSGP">sarah groff hennigh-palermo</a>
       </h3>
+      <div class="interstitial">▽▽</div>
+      <h4 class="ontheweb">FINDING CODIE ELSEWHERE</h4>
       <h3>
         <a href="https://twitter.com/hi_codie">twitter</a> ◘  
         <a href="https://twitter.com/hi_codie">insta</a> ◘ 
         <a href="https://vimeo.com/282159597">vimeo</a>
       </h3>
+      <div class="interstitial">▽</div>
     </section>
     
     <section class="form">
@@ -39,10 +43,11 @@
         target="popupwindow"
         onsubmit="window.open('https://tinyletter.com/codie', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
         <p>
-          <label for="tlemail">Enter your email address to get news about Codie shows and projects</label>
+          <label for="tlemail">or enter your email address to get news about Codie shows and projects</label>
         </p>
         <p>
-          <input type="text" style="width:140px" name="email" id="tlemail" /><input type="submit" value="Subscribe" />
+          <input type="text" name="email" id="tlemail" />
+          <input type="submit" value="✨ Subscribe ✨" />
         </p>
         <input type="hidden" value="1" name="embed"/>
         <p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p>
