--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
   <main>
     <section class="shows">
-      <h4>⚡️ N E X T ⚡️⚡️ S H O W ⚡️ <span class="show-info">9/29 — <a href="https://icfp18.sigplan.org/track/farm-2018-papers">FARM Conference</a> — St. Louis</span></h4>
+      <h4>⚡️ N E X T ⚡️⚡️ S H O W S ⚡️ <br />
+        <span class="show-info">9/9 — <a href="http://muchmoresnyc.com/">Muchmore's</a> — Brooklyn — 9 p.m.</span><br />
+        <span class="show-info">9/29 — <a href="https://icfp18.sigplan.org/track/farm-2018-papers">FARM Conference</a> — St. Louis</span>
+      </h4>
       <h3> </h3>
     </section>
     <section>
