--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <section class="shows">
       <h4>⚡️ N E X T ⚡️⚡️ S H O W S ⚡️ <br />
         <span class="show-info">9/29 — <a href="https://icfp18.sigplan.org/track/farm-2018-papers">FARM Conference</a> — <a href="https://theluminaryarts.com/">The Luminary</a> — St. Louis — 7:30 p.m.</span><br />
+        <span class="show-info">10/18 — <a href="https://www.h0l0.nyc/">H0l0</a> — Brooklyn — 7 p.m.</span><br />
         <span class="show-info">11/20 — <a href="https://lpr.com/lpr_events/brooks-frederickson-small-works-november-20th-2018/">Brooks Frederickson album release show @ Le Poisson Rouge</a> — NYC — 8 p.m.</span>
       </h4>
       <h3> </h3>
