--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <main>
     <section class="shows">
       <h4>⚡️ N E X T ⚡️⚡️ S H O W S ⚡️ <br />
-        <span class="show-info">11/20 — <a href="https://lpr.com/lpr_events/brooks-frederickson-small-works-november-20th-2018/">Brooks Frederickson album release show @ Le Poisson Rouge</a> — NYC — 8 p.m.</span>
-        <span class="show-info">11/21 — <a href="https://www.h0l0.nyc/">Bleep Bloop 2 @ Cobra Club</a> — Brooklyn — 7 p.m.</span><br />
+        <span class="show-info">11/20 — <a href="https://lpr.com/lpr_events/brooks-frederickson-small-works-november-20th-2018/">Brooks Frederickson album release show @ Le Poisson Rouge</a> — NYC — 8 p.m.</span><br />
+        <span class="show-info">11/21 — <a href="https://www.h0l0.nyc/">Bleep Bloop 2 @ Cobra Club</a> — Brooklyn — 7 p.m.</span>
       </h4>
       <h3> </h3>
     </section>
