--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <main>
     <section class="shows">
       <h4>⚡️ N E X T ⚡️⚡️ S H O W S ⚡️ <br />
-        <span class="show-info">11/20 — <a href="https://lpr.com/lpr_events/brooks-frederickson-small-works-november-20th-2018/">Brooks Frederickson album release show @ Le Poisson Rouge</a> — NYC — 8 p.m.</span><br />
-        <span class="show-info">11/21 — <a href="http://cobraclubbk.com/">Bleep Bloop 2 @ Cobra Club</a> — Brooklyn — 7 p.m.</span><br />
-        <span class="show-info">11/23 — <a href="https://www.thewaystationbk.com/">The Way Station</a> — Brooklyn — 9 p.m.</span>
+        <span class="show-info">12/5 — Sarah w/<a href="https://soundcloud.com/automaatio">Automaatio</a> @ <a href="http://www.alphavillebk.com/">Alphaville</a> — Brooklyn — 10 p.m.</span><br />
+        <span class="show-info">12/14 — <a href="https://webivore.ticketleap.com/livecodephl/">Livecode Takes Philly — Algorave</a> — Philadelphia — 7:30 p.m.</span><br />
+        <span class="show-info">12/15 — <a href=" https://webivore.ticketleap.com/livecodeworkshop/">Livecode Takes Philly — Workshop</a> — Philadelphia — noon</span>
       </h4>
       <h3> </h3>
     </section>
