--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h4>⚡️ N E X T ⚡️⚡️ S H O W S ⚡️ <br />
         <span class="show-info">12/5 — Sarah w/<a href="https://soundcloud.com/automaatio">Automaatio</a> @ <a href="http://www.alphavillebk.com/">Alphaville</a> — Brooklyn — 10 p.m.</span><br />
         <span class="show-info">12/14 — <a href="https://webivore.ticketleap.com/livecodephl/">Livecode Takes Philly — Algorave</a> — Philadelphia — 7:30 p.m.</span><br />
-        <span class="show-info">12/15 — <a href=" https://webivore.ticketleap.com/livecodeworkshop/">Livecode Takes Philly — Workshop</a> — Philadelphia — noon</span>
+        <span class="show-info">12/15 — <a href="https://webivore.ticketleap.com/livecodeworkshop/">Livecode Takes Philly — Workshop</a> — Philadelphia — noon</span>
       </h4>
       <h3> </h3>
     </section>
@@ -33,7 +33,7 @@
       <h4 class="ontheweb">FINDING CODIE ELSEWHERE</h4>
       <h3>
         <a href="https://twitter.com/hi_codie">twitter</a> ◘  
-        <a href="https://twitter.com/hi_codie">insta</a> ◘ 
+        <a href="https://www.instagram.com/hi_codie/">insta</a> ◘ 
         <a href="https://vimeo.com/282159597">vimeo</a>
       </h3>
       <div class="interstitial">▽</div>
