--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <main>
     <section class="shows">
       <h4>⚡️ N E X T ⚡️⚡️ S H O W S ⚡️ <br />
-        <span class="show-info">12/5 — Sarah w/<a href="https://soundcloud.com/automaatio">Automaatio</a> @ <a href="http://www.alphavillebk.com/">Alphaville</a> — Brooklyn — 10 p.m.</span><br />
-        <span class="show-info">12/14 — <a href="https://webivore.ticketleap.com/livecodephl/">Livecode Takes Philly — Algorave</a> — Philadelphia — 7:30 p.m.</span><br />
-        <span class="show-info">12/15 — <a href="https://webivore.ticketleap.com/livecodeworkshop/">Livecode Takes Philly — Workshop</a> — Philadelphia — noon</span>
+        <span class="show-info">1/16 — Codie @ <a href="http://iclc.livecodenetwork.org/2019/ingles.html">ICLC 2019</a> — Nave de terneras — Madrid — 6 p.m.</span><br />
+        <span class="show-info">1/25 — <a href=" https://www.facebook.com/events/2189544257930647/">Eulerroom x Algorave</a> — Access Space — Sheffield — 8 p.m.</span><br />
+        <span class="show-info">2/3 — <a href="https://bleepbloop3.glitch.me/">Bleep Bloop 3 — Farewell to Eric</a> — H0l0 — Brooklyn — 1 p.m.</span><br />
       </h4>
       <h3> </h3>
     </section>
