--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <main>
     <section class="shows">
       <h4>⚡️ N E X T ⚡️⚡️ S H O W S ⚡️ <br />
-        <span class="show-info">1/16 — Codie @ <a href="http://iclc.livecodenetwork.org/2019/ingles.html">ICLC 2019</a> — Nave de terneras — Madrid — 6 p.m.</span><br />
-        <span class="show-info">1/25 — <a href=" https://www.facebook.com/events/2189544257930647/">Eulerroom x Algorave</a> — Access Space — Sheffield — 8 p.m.</span><br />
-        <span class="show-info">2/3 — <a href="https://bleepbloop3.glitch.me/">Bleep Bloop 3 — Farewell to Eric</a> — H0l0 — Brooklyn — 1 p.m.</span><br />
+        <span class="show-info">Codie is on hiatus for March and April. We will be back 5/10 in NYC.<br />
+        <span class="show-info">In the meantime, check out our popup with OnCanal ⤵ </span><br />
+        <span class="show-info"><a href="https://goo.gl/maps/zWYshGpNwGr">318 Canal Street (btw. Greene & Mercer), NYC</a> (through 3/31)</span><br />
       </h4>
       <h3> </h3>
     </section>
@@ -30,11 +30,11 @@
         <a href="https://twitter.com/superSGP">sarah groff hennigh-palermo</a>
       </h3>
       <div class="interstitial">▽▽</div>
-      <h4 class="ontheweb">FINDING CODIE ELSEWHERE</h4>
+      <h4 class="ontheweb">SHOW CLIPS, ANNOUNCEMENTS AND FILMS</h4>
       <h3>
-        <a href="https://twitter.com/hi_codie">twitter</a> ◘  
-        <a href="https://www.instagram.com/hi_codie/">insta</a> ◘ 
-        <a href="https://vimeo.com/282159597">vimeo</a>
+        <a class="outward" href="https://twitter.com/hi_codie">twitter</a> ◘  
+        <a class="outward" href="https://www.instagram.com/hi_codie/">insta</a> ◘ 
+        <a class="outward" href="https://vimeo.com/282159597">vimeo</a>
       </h3>
       <div class="interstitial">▽</div>
     </section>
