Update next show

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
   <main>
     <section class="shows">
       <h4>⚡️ N E X T ⚡️⚡️ S H O W S ⚡️ <br />
-        <span class="show-info">Codie is on hiatus for March and April. We will be back 5/10 in NYC.<br />
-        <span class="show-info">In the meantime, check out our popup with OnCanal ⤵ </span><br />
-        <span class="show-info"><a href="https://goo.gl/maps/zWYshGpNwGr">318 Canal Street (btw. Greene & Mercer), NYC</a> (through 3/31)</span><br />
+        <span class="show-info">Codie will return at <a href="https://iclc.livecodenetwork.org/2020/">ICLC 2020.</a><br />
       </h4>
       <h3> </h3>
     </section>
