--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <main>
     <section class="shows">
       <h4>⚡️ N E X T ⚡️⚡️ S H O W S ⚡️ <br />
-        <span class="show-info">Codie will return at <a href="https://iclc.livecodenetwork.org/2020/">ICLC 2020.</a><br />
+        <span class="show-info">Codie in space at <a href="https://www.twitch.tv/spacycloudlounge">sPACYcLOUd Lounge</a>, May 25, 6pm EST // 12a CEST<br />
       </h4>
       <h3> </h3>
     </section>
