--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <main>
     <section class="shows">
       <h4>⚡️ N E X T ⚡️⚡️ S H O W S ⚡️ <br />
-        <span class="show-info">Codie in space at <a href="https://www.twitch.tv/spacycloudlounge">sPACYcLOUd Lounge</a>, May 25, 6pm EST // 12a CEST<br />
+        <span class="show-info">nothing currently scheduled</span>
       </h4>
       <h3> </h3>
     </section>
@@ -32,7 +32,7 @@
       <h3>
         <a class="outward" href="https://twitter.com/hi_codie">twitter</a> ◘  
         <a class="outward" href="https://www.instagram.com/hi_codie/">insta</a> ◘ 
-        <a class="outward" href="https://vimeo.com/282159597">vimeo</a>
+        <a class="outward" href="https://vimeo.com/hicodie">vimeo</a>
       </h3>
       <div class="interstitial">▽</div>
     </section>
