Add page for alone | together

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,600i" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="cover">
   <main>
     <section class="shows">
       <h4>⚡️ N E X T ⚡️⚡️ S H O W S ⚡️ <br />
-        <span class="show-info">nothing currently scheduled</span>
+        <span class="show-info">April 8, <a href="https://linktr.ee/hi_codie">Algorave, Depillars Gallery, VCU,</a> Richmond, VA</span><br />
+        <span class="show-info">April 1–13, <a href="https://linktr.ee/hi_codie">Alone | Together, Depillars Gallery, VCU,</a> Richmond, VA</span><br />
+        <span class="show-info"><a href="./alone-together.html">↠ show notes</a></span>
       </h4>
       <h3> </h3>
     </section>
